--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -141,6 +141,13 @@
 				<version>2.6</version>
 			</plugin>
 		</plugins>
+		<extensions>
+			<extension>
+				<groupId>com.google.code.maven-svn-wagon</groupId>
+				<artifactId>maven-svn-wagon</artifactId>
+				<version>1.1</version>
+			</extension>
+		</extensions>
 	</build>
 
 	<profiles>
