--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -52,14 +52,24 @@
 		<url>http://code.google.com/p/crx-maven-plugin/issues/list</url>
 	</issueManagement>
 
+	<repositories>
+		<repository>
+			<id>maven2-repository.dev.java.net</id>
+			<name>Java.net Repository for Maven</name>
+			<url>http://download.java.net/maven/2/</url>
+		</repository>
+	</repositories>
+
 	<distributionManagement>
 		<repository>
 			<id>google-code</id>
+			<uniqueVersion>false</uniqueVersion>
 			<name>crx-maven-plugin SVN Repository</name>
 			<url>svn:https://crx-maven-plugin.googlecode.com/svn/maven2</url>
 		</repository>
 		<snapshotRepository>
 			<id>google-code</id>
+			<uniqueVersion>false</uniqueVersion>
 			<name>crx-maven-plugin SVN Repository</name>
 			<url>svn:https://crx-maven-plugin.googlecode.com/svn/maven2</url>
 		</snapshotRepository>
@@ -78,6 +88,14 @@
 		</dependency>
 	</dependencies>
 	<build>
+		<extensions>
+			<extension>
+				<groupId>org.jvnet.wagon-svn</groupId>
+				<artifactId>wagon-svn</artifactId>
+				<version>1.11</version>
+			</extension>
+		</extensions>
+
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -141,13 +159,6 @@
 				<version>2.6</version>
 			</plugin>
 		</plugins>
-		<extensions>
-			<extension>
-				<groupId>com.google.code.maven-svn-wagon</groupId>
-				<artifactId>maven-svn-wagon</artifactId>
-				<version>1.1</version>
-			</extension>
-		</extensions>
 	</build>
 
 	<profiles>
@@ -186,10 +197,37 @@
 				</plugins>
 			</build>
 		</profile>
+		<profile>
+			<id>release-sign-artifacts</id>
+			<activation>
+				<property>
+					<name>performRelease</name>
+					<value>true</value>
+				</property>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>sign-artifacts</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
 	</profiles>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
+
 </project>
