--- a/trunk/plugin/pom.xml
+++ b/trunk/plugin/pom.xml
@@ -3,77 +3,24 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
+	<parent>
+		<groupId>com.google.code</groupId>
+		<artifactId>crx-maven</artifactId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
+
 	<groupId>com.google.code</groupId>
 	<artifactId>crx-maven-plugin</artifactId>
 	<packaging>maven-plugin</packaging>
-	<version>1.0-SNAPSHOT</version>
 
-	<name>Chrome CRX Maven Plugin</name>
-	<url>http://code.google.com/p/crx-maven-plugin/</url>
-	<inceptionYear>2010</inceptionYear>
+	<name>CRX Maven Plugin</name>
 	<description>This plugin generates Google Chrome Web App (CRX) files.</description>
 
-	<prerequisites>
-		<maven>2.0.4</maven>
-	</prerequisites>
-
-	<licenses>
-		<license>
-			<name>New BSD License</name>
-			<url>http://www.opensource.org/licenses/bsd-license.php</url>
-		</license>
-	</licenses>
-
-	<organization>
-		<name>Bitmenu, Inc.</name>
-		<url>http://www.bitmenu.com/</url>
-	</organization>
-
-	<developers>
-		<developer>
-			<name>Jason Thrasher</name>
-			<email>jason@bitmenu.com</email>
-			<organization>Bitmenu, Inc.</organization>
-			<organizationUrl>http://www.bitmenu.com/</organizationUrl>
-			<roles>
-				<role>Developer</role>
-			</roles>
-		</developer>
-	</developers>
-
 	<scm>
-		<connection>scm:svn:http://crx-maven-plugin.googlecode.com/svn/trunk</connection>
-		<developerConnection>scm:svn:https://crx-maven-plugin.googlecode.com/svn/trunk</developerConnection>
-		<url>http://code.google.com/p/crx-maven-plugin/source/browse/#svn/trunk</url>
+		<connection>scm:svn:http://crx-maven-plugin.googlecode.com/svn/trunk/plugin</connection>
+		<developerConnection>scm:svn:https://crx-maven-plugin.googlecode.com/svn/trunk/plugin</developerConnection>
+		<url>http://code.google.com/p/crx-maven-plugin/source/browse/#svn/trunk/plugin</url>
 	</scm>
-
-	<issueManagement>
-		<system>Google Code</system>
-		<url>http://code.google.com/p/crx-maven-plugin/issues/list</url>
-	</issueManagement>
-
-	<repositories>
-		<repository>
-			<id>maven2-repository.dev.java.net</id>
-			<name>Java.net Repository for Maven</name>
-			<url>http://download.java.net/maven/2/</url>
-		</repository>
-	</repositories>
-
-	<distributionManagement>
-		<repository>
-			<id>google-code</id>
-			<uniqueVersion>false</uniqueVersion>
-			<name>crx-maven-plugin SVN Repository</name>
-			<url>svn:https://crx-maven-plugin.googlecode.com/svn/maven2</url>
-		</repository>
-		<snapshotRepository>
-			<id>google-code</id>
-			<uniqueVersion>false</uniqueVersion>
-			<name>crx-maven-plugin SVN Repository</name>
-			<url>svn:https://crx-maven-plugin.googlecode.com/svn/maven2</url>
-		</snapshotRepository>
-	</distributionManagement>
 
 	<dependencies>
 		<dependency>
