Added support for Webapp Options page, per example here: http://code.google.com/chrome/extensions/options.html

--- a/archetype/src/main/resources/archetype-resources/src/main/webapp/manifest.json
+++ b/archetype/src/main/resources/archetype-resources/src/main/webapp/manifest.json
@@ -11,6 +11,9 @@
       "local_path": "index.html"
     }
   },
+  
+  "options_page": "options.html",
+  
   "permissions": [
     "geolocation",
     "notifications",
