--- a/trunk/archetype/src/main/resources/archetype-resources/src/main/webapp/manifest.json
+++ b/trunk/archetype/src/main/resources/archetype-resources/src/main/webapp/manifest.json
@@ -11,6 +11,9 @@
       "local_path": "index.html"
     }
   },
+  
+  "options_page": "options.html",
+  
   "permissions": [
     "geolocation",
     "notifications",
