--- a/trunk/archetype/src/main/resources/archetype-resources/src/main/webapp/manifest.json
+++ b/trunk/archetype/src/main/resources/archetype-resources/src/main/webapp/manifest.json
@@ -15,8 +15,6 @@
   "options_page": "options.html",
   
   "permissions": [
-    "geolocation",
-    "notifications",
-    "unlimited_storage"
+    "notifications"
   ]
 }
