--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.google.code</groupId>
 	<artifactId>crx-maven</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>pom</packaging>
 
 	<name>CRX Parent</name>
@@ -43,9 +43,9 @@
 	</developers>
 
 	<scm>
-		<connection>scm:svn:http://crx-maven-plugin.googlecode.com/svn/trunk</connection>
-		<developerConnection>scm:svn:https://crx-maven-plugin.googlecode.com/svn/trunk</developerConnection>
-		<url>http://code.google.com/p/crx-maven-plugin/source/browse/#svn/trunk</url>
+		<connection>scm:svn:http://crx-maven-plugin.googlecode.com/svn/tags/crx-maven-plugin-1.0.0</connection>
+		<developerConnection>scm:svn:https://crx-maven-plugin.googlecode.com/svn/tags/crx-maven-plugin-1.0.0</developerConnection>
+		<url>http://code.google.com/p/crx-maven-plugin/source/browse/#svn/tags/crx-maven-plugin-1.0.0</url>
 	</scm>
 
 	<issueManagement>
