--- a/trunk/archetype/pom.xml
+++ b/trunk/archetype/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.google.code</groupId>
 		<artifactId>crx-maven</artifactId>
-		<version>1.0.0</version>
+		<version>1.1.0-SNAPSHOT</version>
 	</parent>
 
   <artifactId>crx-maven-archetype</artifactId>
