--- a/trunk/plugin/src/it/html5rocks/pom.xml
+++ b/trunk/plugin/src/it/html5rocks/pom.xml
@@ -41,6 +41,7 @@
 				<configuration>
 					<pemKey>${chrome-webapp.key}</pemKey>
 					<pemCert>${chrome-webapp.cert}</pemCert>
+					<excludes>WEB-INF/**</excludes>
 				</configuration>
 			</plugin>
 		</plugins>
