--- a/trunk/plugin/src/it/maps_app/pom.xml
+++ b/trunk/plugin/src/it/maps_app/pom.xml
@@ -39,6 +39,7 @@
 				<configuration>
 					<pemKey>@pemKey@</pemKey>
 					<pemCert>@pemCert@</pemCert>
+					<excludes>WEB-INF/**</excludes>
 				</configuration>
 			</plugin>
 		</plugins>
