Added ability to exclude/include specific files from the webapp directory using appropriate filters.  Added examples of filters to pom files as well.

--- a/plugin/src/it/html5rocks/pom.xml
+++ b/plugin/src/it/html5rocks/pom.xml
@@ -41,6 +41,7 @@
 				<configuration>
 					<pemKey>${chrome-webapp.key}</pemKey>
 					<pemCert>${chrome-webapp.cert}</pemCert>
+					<excludes>WEB-INF/**</excludes>
 				</configuration>
 			</plugin>
 		</plugins>
