--- a/plugin/src/it/gwt_greet/pom.xml
+++ b/plugin/src/it/gwt_greet/pom.xml
@@ -15,17 +15,9 @@
 	mvn gwt:run -Dgwt.module=com.bitmenu.Greet -DrunTarget=/Greet.html
 	</description>
 
-	<pluginRepositories>
-		<pluginRepository>
-			<!-- working version of gwt-maven-plugin is pulled from here -->
-			<id>gwt-repo</id>
-			<url>http://google-web-toolkit.googlecode.com/svn/2.1.0.M2/gwt/maven</url>
-			<name>Google Web Toolkit Repository</name>
-		</pluginRepository>
-	</pluginRepositories>
-
 	<build>
-		<outputDirectory>${project.build.directory}/${project.build.finalName}/WEB-INF/classes</outputDirectory>
+		<!-- Generate compiled stuff in the folder used for developing mode -->
+		<outputDirectory>${webappDirectory}/WEB-INF/classes</outputDirectory>
 
 		<pluginManagement>
 			<plugins>
@@ -40,19 +32,6 @@
 		</pluginManagement>
 		<plugins>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-war-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>exploded</id>
-						<phase>prepare-package</phase>
-						<goals>
-							<goal>exploded</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
 				<groupId>com.google.code</groupId>
 				<artifactId>crx-maven-plugin</artifactId>
 				<version>@project.version@</version>
@@ -60,25 +39,43 @@
 				<configuration>
 					<pemKey>@pemKey@</pemKey>
 					<pemCert>@pemCert@</pemCert>
+					<excludes>WEB-INF/**,greet/hosted.html</excludes>
 				</configuration>
 			</plugin>
+
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>gwt-maven-plugin</artifactId>
-				<version>1.3.1.google</version>
+				<version>${gwt.version}</version>
 				<configuration>
-					<hostedWebapp>${project.build.directory}/${project.build.finalName}</hostedWebapp>
-					<copyWebapp>true</copyWebapp>
+					<hostedWebapp>${webappDirectory}</hostedWebapp>
 				</configuration>
 				<executions>
 					<execution>
-						<id>gwtcompile</id>
+						<id>gwt-compile</id>
 						<phase>prepare-package</phase>
 						<goals>
 							<goal>compile</goal>
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+
+			<!-- Copy static web files before executing gwt:run -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>exploded</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<webappDirectory>${webappDirectory}</webappDirectory>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
@@ -106,7 +103,10 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<gwt.version>2.0.3</gwt.version>
+		<gwt.version>2.1.0</gwt.version>
+
+		<!-- property for this project only -->
+		<webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
 	</properties>
 
 </project>
