[maven-release-plugin] prepare release crx-maven-plugin-1.1.0

--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
 		<groupId>com.google.code</groupId>
 		<artifactId>crx-maven</artifactId>
-		<version>1.1.0-SNAPSHOT</version>
+		<version>1.1.0</version>
 	</parent>
 
 	<artifactId>crx-maven-plugin</artifactId>
@@ -16,9 +15,9 @@
 	<description>This plugin generates Google Chrome Web App (CRX) files.</description>
 
 	<scm>
-		<connection>scm:svn:http://crx-maven-plugin.googlecode.com/svn/trunk/plugin</connection>
-		<developerConnection>scm:svn:https://crx-maven-plugin.googlecode.com/svn/trunk/plugin</developerConnection>
-		<url>http://code.google.com/p/crx-maven-plugin/source/browse/#svn/trunk/plugin</url>
+		<connection>scm:svn:http://crx-maven-plugin.googlecode.com/svn/tags/crx-maven-plugin-1.1.0/plugin</connection>
+		<developerConnection>scm:svn:https://crx-maven-plugin.googlecode.com/svn/tags/crx-maven-plugin-1.1.0/plugin</developerConnection>
+		<url>http://code.google.com/p/crx-maven-plugin/source/browse/#svn/tags/crx-maven-plugin-1.1.0/plugin</url>
 	</scm>
 
 	<dependencies>
@@ -116,14 +115,9 @@
 						<configuration>
 							<target>
 								<echo level="info">Publishing to Google Code using: ${google.code.username} / ${google.code.password}</echo>
-								<taskdef classname="net.bluecow.googlecode.ant.GoogleCodeUploadTask"
-									classpath="${project.basedir}/../lib/ant-googlecode-0.0.2.jar" name="gcupload" />
+								<taskdef classname="net.bluecow.googlecode.ant.GoogleCodeUploadTask" classpath="${project.basedir}/../lib/ant-googlecode-0.0.2.jar" name="gcupload" />
 
-								<gcupload username="${google.code.username}" password="${google.code.password}"
-									projectname="${project.artifactId}"
-									filename="${project.build.directory}/${project.build.finalName}.jar"
-									targetfilename="${project.build.finalName}.jar" summary="${project.name} ver ${project.version}"
-									labels="gwt, maven, plugin" />
+								<gcupload username="${google.code.username}" password="${google.code.password}" projectname="${project.artifactId}" filename="${project.build.directory}/${project.build.finalName}.jar" targetfilename="${project.build.finalName}.jar" summary="${project.name} ver ${project.version}" labels="gwt, maven, plugin" />
 							</target>
 						</configuration>
 					</execution>
