--- a/trunk/plugin/pom.xml
+++ b/trunk/plugin/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.google.code</groupId>
 		<artifactId>crx-maven</artifactId>
-		<version>1.1.0</version>
+		<version>1.2.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>crx-maven-plugin</artifactId>
@@ -15,9 +15,9 @@
 	<description>This plugin generates Google Chrome Web App (CRX) files.</description>
 
 	<scm>
-		<connection>scm:svn:http://crx-maven-plugin.googlecode.com/svn/tags/crx-maven-plugin-1.1.0/plugin</connection>
-		<developerConnection>scm:svn:https://crx-maven-plugin.googlecode.com/svn/tags/crx-maven-plugin-1.1.0/plugin</developerConnection>
-		<url>http://code.google.com/p/crx-maven-plugin/source/browse/#svn/tags/crx-maven-plugin-1.1.0/plugin</url>
+		<connection>scm:svn:http://crx-maven-plugin.googlecode.com/svn/trunk/plugin</connection>
+		<developerConnection>scm:svn:https://crx-maven-plugin.googlecode.com/svn/trunk/plugin</developerConnection>
+		<url>http://code.google.com/p/crx-maven-plugin/source/browse/#svn/trunk/plugin</url>
 	</scm>
 
 	<dependencies>
